--- a/src/Auth/Login.css
+++ b/src/Auth/Login.css
@@ -33,7 +33,7 @@
   border-radius: 3px;
 }
 
-.input-group button {
+.login-container button {
   width: 100%;
   padding: 10px;
   font-size: 16px;
@@ -45,6 +45,6 @@
   margin: 2px;
 }
 
-.input-group button:hover {
+.login-container button:hover {
   background-color: #0056b3;
 }
