--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-height: 100vh;
+  max-width: 100vw;
+  height: 100vh;
+  width: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 code {
