--- a/src/MainApp/Conv/MessagesList.css
+++ b/src/MainApp/Conv/MessagesList.css
@@ -1,2 +1,20 @@
+.messages-list-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 83vh;
+}
+
 .messages-list {
+  overflow: auto;
+  padding: 0.5rem;
+}
+
+.messages-landing {
+  height: 83vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
