--- a/src/MainApp/Conv/ConvStyle/SendButton.css
+++ b/src/MainApp/Conv/ConvStyle/SendButton.css
@@ -5,6 +5,7 @@
   height: 40px;
   width: 40px;
   margin: 0.1rem;
+  margin-left: 0.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
