--- a/src/MainApp/Users/UsersStyle/SearchBar.css
+++ b/src/MainApp/Users/UsersStyle/SearchBar.css
@@ -2,5 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin: 1rem;
+  margin-bottom: 0;
+  h4 {
+    color: #888;
+  }
 }
