--- a/src/MainApp/Conv/ConvStyle/Badge.css
+++ b/src/MainApp/Conv/ConvStyle/Badge.css
@@ -17,12 +17,17 @@
     margin-top: 0;
   }
   h2 {
-    margin-bottom: 0;
     margin-top: 1rem;
+    margin-bottom: 0;
+
+    text-align: center;
+    display: flex;
+    align-items: center;
   }
 }
 
-.badge-container > .avatar {
+.badge-container > .avatar-container > .avatar {
+  overflow: visible;
   margin: 0.5rem;
   width: 4rem;
   height: 4rem;
@@ -32,4 +37,9 @@
 .badge-container > h1 {
   text-align: center;
   width: 60vw;
+}
+
+div.convrsation-users-list-container {
+  margin-left: auto;
+  margin-right: 2rem;
 }
