--- a/src/MainApp/Conv/ConvStyle/Message.css
+++ b/src/MainApp/Conv/ConvStyle/Message.css
@@ -108,3 +108,38 @@ div.message-container > .avatar {
   margin: 0;
   text-align: center;
 }
+
+.typing__dot {
+  float: left;
+  width: 8px;
+  height: 8px;
+  margin: 8px 4px;
+  background: #8d8c91;
+  border-radius: 50%;
+  opacity: 0;
+  animation: loadingFade 1s infinite;
+}
+
+.typing__dot:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.typing__dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.typing__dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes loadingFade {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0;
+  }
+}
