--- a/src/MainApp/Room/RoomStyle/RoomCreationForm.css
+++ b/src/MainApp/Room/RoomStyle/RoomCreationForm.css
@@ -3,12 +3,12 @@
 }
 .users-list {
   max-height: 28vh;
-  width: 10vw;
+  max-width: 15vw;
   grid-column: 1;
 }
 .selected-users-list {
   max-height: 28vh;
-  width: 10vw;
+  max-width: 15vw;
   grid-column: 2;
 }
 
@@ -16,8 +16,6 @@
   display: flex;
   flex-direction: row;
   overflow: auto;
-  width: 20vw;
-  grid-template-columns: repeat(2, 10vw);
 }
 
 .selected-container {
